oxiplate-derive/tests/broken/strings/raw-rust-string.stderr
error: "if" statement is never closed (unexpected end of template)
 --> tests/broken/strings/raw-rust-string.rs:4:41
  |
4 | #[oxiplate_inline(r##"{% if "foo" == 3 %}"##)]
  |                                         ^
